@@ -9,6 +9,17 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 
+- methods for `dhcpv6::UnknownOption` & `RelayMsg`
+
+### Changed
+
+- exposed some dhcpv6 opt fields as `pub`
+- `InterfaceId` type changed from `String` to `Vec<u8>`
+
+### Removed
+
+- `ElapsedTime` and `Preference`
+
 ## [0.5.0]
 
 ### Added
